@@ -1,3 +1,7 @@
+2003-11-14  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b10
+	
+	* Added backwards compatibility for user customized thumbnail frames.
+
 2003-11-14  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b9
 
 	* w3.org links only if devMode="yes"
